Task5/api-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: non-admin-api-allow
  namespace: default
spec:
  podSelector:
    matchExpressions:
      - key: role
        operator: In
        values: [front-end, back-end-api]
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: role
                operator: In
                values: [front-end, back-end-api]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-api-allow
  namespace: default
spec:
  podSelector:
    matchExpressions:
      - key: role
        operator: In
        values: [admin-front-end, admin-back-end-api]
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: role
                operator: In
                values: [admin-front-end, admin-back-end-api]
